--- a/exam.css
+++ b/exam.css
@@ -1,4 +1,5 @@
-
+@import url('https://fonts.cdnfonts.com/css/gilroy-bold');
+ 
 
 * {
     padding: 0;
@@ -573,7 +574,6 @@ select {
     align-items: center;
     gap: 0.5rem;
     margin-bottom: 3rem;
-    padding
 }
 
 .faqs-text {
